tests/type_errors/ord_trait_violation.nos
# expect_error: not comparable
# Test: using < on type with function field (functions don't support comparison)

type Unordered = { data: Int -> Int }

main() = {
    a = Unordered(x => x)
    b = Unordered(x => x * 2)
    a < b
}
